--- a/SWEN90016/assignments/assignment1/assignmentOne.tex
+++ b/SWEN90016/assignments/assignment1/assignmentOne.tex
@@ -101,13 +101,32 @@ Assignment 1 \\ % The assignment title
 
 \section{Short Research Questions}
 
+\paragraph{Ans. 1.1}
+
+The major goals of this software product are as follows:
+
+\begin{itemize}
+	\item Monitor and display the environment data of the aquarium as well as allow one to view one's aquarium on the website;
+	\item Provide a social environment for the users to share/view aquarium data, connect with others as well as discuss about aquarium/fish related topics;
+\end{itemize}
+
+\paragraph{Ans. 1.2}
+The value to the external stakeholder/s as follows:
+\begin{itemize}
+	\item The product provides with a platform to monitor his aquarium, connect with others, share information about aquariums and discuss fish related topics;
+	\item The product could bring advertisement income when aquarium brands and aquarium technology device creators advertise and sell their products on the platform. 
+\end{itemize}
 
 
 
 
 %\lipsum[2] % Dummy text
 \section{Extended Research Questions}
-
+\paragraph{Ans. 2.1}
+Challenging difficulties:
+\begin{itemize}
+	\item 
+\end{itemize}
 
 \section{Discussion}
 
