--- a/SWEN90016/assignments/assignment1/assignmentOne.tex
+++ b/SWEN90016/assignments/assignment1/assignmentOne.tex
@@ -156,7 +156,7 @@ Challenging difficulties:
 
 \newpage
 \section{Discussion}
-\paragraph{Ans. 3.1}For this project, we could possibly choose from the incremental build model or the agile model.
+\paragraph{Ans. 3.1}For this project, we could possibly choose from the incremental build model or the agile-scrum model.
 \begin{itemize}
 	\item For the incremental build model:
 	\begin{enumerate}
@@ -165,11 +165,11 @@ Challenging difficulties:
 		\item After the initial development stage, when the 'must have' features have already been implemented, there could be several 'good to have' features need to be added to the project. Although compared to waterfall model, the incremental model allows a certain degree of change to the project, but it is not as flexible as the agile model, since Mr.X also have not a clear plan or schedule for the 'good to have' features. 
 		\item Due to the nature of the incremental model, once a problem detected and need to be corrected, all other units will also need correction, which will consume a considerable amount of time\cite{incremodel} and could be very inconvenient for the users need to monitor their aquaria remotely and online.
 	\end{enumerate}
-	\item For the agile model:
+	\item For the agile-scrum model:
 	\begin{enumerate}
-		\item The agile model allows fast development as well as deployment of projects, which will make Mr.Y see that his investment comes with a result. The functionality can be rapidly developed and demonstrated to the stakeholders. The release of core functions of the platform may be less than the initially planed six-month time. 
+		\item The agile-scrum model allows fast development as well as deployment of projects, which will make Mr.Y see that his investment comes with a result. The functionality can be rapidly developed and demonstrated to the stakeholders. The release of core functions of the platform may be less than the initially planed six-month time. 
 		\item Development of the project will need less resources and less detailed planning compared to the incremental model, and new features such as extending the website to include the social platform will be much easier to be implemented with less documentation work.
-		\item However, as the agile model does not require a detailed plan nor a well established documentation, the budget could go beyond the scope of Mr.Y's initial investment. And the sustainability, maintainability also the extensibility\cite{agilemodel} could be worse than the incremental model. Errors can occur in the release stage and cause loss to the users before the team could fix the bug.
+		\item However, as the agile-scrum model does not require a detailed plan nor a well established documentation, the budget could go beyond the scope of Mr.Y's initial investment. And the sustainability, maintainability also the extensibility\cite{agilemodel} could be worse than the incremental model. Errors can occur in the release stage and cause loss to the users before the team could fix the bug.
 		\item When it comes to a new stage of development, as agile project is not very well documented, it could be hard to transfer the project to a new group, and core features may malfunction when a new team decides to alter or add some features.
 	\end{enumerate}
 \end{itemize}
@@ -177,7 +177,7 @@ Challenging difficulties:
 
 \paragraph{} During the first six months of development --- the initial stage of the project, to make full use of Mr.Y's investment, we need a detailed plan. Also, to develop a well-established security strategy, the developers should also come up with a rigid plan and brainstorm possible security loopholes as well as countermeasures. In this stage, the group will need a rigid model(but not too rigid like waterfall) and produce a full and accurate document for the core functions as well as security functions. Since malfunctioning of core features could cause users to lose some very rare and expensive pet fish, the developers must adopt a more rigid build model (compared to agile) to identify possible errors and fix them before the first release.
 
-\paragraph{}After the initial stage of development and all the 'must have' features are properly implemented without serious errors, the developers can adopt the agile model for further developments of the 'good to have' and 'can do without' features as well as adding support for new aquarium technology devices. Due to incremental model applied in the initial stage, the maintenance of the platform could be very easy with detailed documentation. Also, the core features  will continue to function properly when the developers adding new features to the system since they are adopting agile after the initial stage of development.  
+\paragraph{}After the initial stage of development and all the 'must have' features are properly implemented without serious errors, the developers can adopt the agile-scrum model for further developments of the 'good to have' and 'can do without' features as well as adding support for new aquarium technology devices with proper sprints. Due to incremental model applied in the initial stage, the maintenance of the platform could be very easy with detailed documentation. Also, the core features  will continue to function properly when the developers adding new features to the system since they are adopting agile after the initial stage of development.  
 
 
 
