--- a/SWEN90016/assignments/assignment1/assignmentOne.tex
+++ b/SWEN90016/assignments/assignment1/assignmentOne.tex
@@ -114,7 +114,7 @@ The major goals of this software product are as follows:
 The value to the external stakeholder/s as follows:
 \begin{itemize}
 	\item The product provides with a platform to monitor his aquarium, connect with others, share information about aquariums and discuss fish related topics;
-	\item The product could bring advertisement income when aquarium brands and aquarium technology device creators advertise and sell their products on the platform. 
+	\item The product could bring advertisement income when aquarium brands and aquarium technology device creators advertise and sell their products on the platform\cite{case}. 
 \end{itemize}
 
 
@@ -148,7 +148,7 @@ Challenging difficulties:
      \hline
      Syncing with aquarium technology devices& High & After the users signed up and set up their aquarium profile, they need to link their aquarium devices to the website so they can monitor the environment of the aquarium on the website.\\
      \hline
-      Extend the website to include the social platform& Medium &The developer do not need to implement this function at the initial stage of the development (first six months), but it will be good to provide the users with a platform to discuss fish and aquarium related topics so there can be potential aquarium brands as well as aquarium technology device creators willing to advertise on the website, bring income to the stakeholders. \\
+      Extend the website to include the social platform& Medium &The developer do not need to implement this function at the initial stage of the development (first six months\cite{case}), but it will be good to provide the users with a platform to discuss fish and aquarium related topics so there can be potential aquarium brands as well as aquarium technology device creators willing to advertise on the website, bring income to the stakeholders. \\
     \hline
     \end{tabular}
 \end{table}
@@ -160,7 +160,7 @@ Challenging difficulties:
 \begin{itemize}
 	\item For the incremental build model:
 	\begin{enumerate}
-		\item Since Mr. X already has a clear plan on what features need to be implemented during the initial stage and what is not that urgently need and can be realized afterwards, the budget can be more controlled to a certain scope than the agile model. With a clear and controlled budget, Mr. Y will be more likely to continue his investment after the initial stage.
+		\item Since Mr. X already has a clear plan on what features need to be implemented during the initial stage and what is not that urgently need and can be realized afterwards\cite{case}, the budget can be more controlled to a certain scope than the agile model. With a clear and controlled budget, Mr. Y will be more likely to continue his investment after the initial stage.
 		\item Since aquaria are usually used to keep pet fish collected by the hobbyists, some fish can be rare and expensive\cite{aquawiki}. Hence an unstable aquarium environment, which often caused by unreliable data monitoring system, can lead to significant property loss  of the users. Hence we need a rigid SDLC model to detect the errors prior to the release of the product. Compared to waterfall model, which makes the product hard to scale up once finished, incremental model allows changes as well as easy identification of error during the development stage.
 		\item After the initial development stage, when the 'must have' features have already been implemented, there could be several 'good to have' features need to be added to the project. Although compared to waterfall model, the incremental model allows a certain degree of change to the project, but it is not as flexible as the agile model, since Mr.X also have not a clear plan or schedule for the 'good to have' features. 
 		\item Due to the nature of the incremental model, once a problem detected and need to be corrected, all other units will also need correction, which will consume a considerable amount of time\cite{incremodel} and could be very inconvenient for the users need to monitor their aquaria remotely and online.
@@ -175,7 +175,7 @@ Challenging difficulties:
 \end{itemize}
 \paragraph{Ans. 3.2}From the author's point of view, we could apply a mixed model of both of the incremental and the agile model. Hence, a more rigid and well-documented agile model or a more flexible incremental model.
 
-\paragraph{} During the first six months of development --- the initial stage of the project, to make full use of Mr.Y's investment, we need a detailed plan. Also, to develop a well-established security strategy, the developers should also come up with a rigid plan and brainstorm possible security loopholes as well as countermeasures. In this stage, the group will need a rigid model(but not too rigid like waterfall) and produce a full and accurate document for the core functions as well as security functions. Since malfunctioning of core features could cause users to lose some very rare and expensive pet fish, the developers must adopt a more rigid build model (compared to agile) to identify possible errors and fix them before the first release.
+\paragraph{} During the first six months\cite{case} of development --- the initial stage of the project, to make full use of Mr.Y's investment, we need a detailed plan. Also, to develop a well-established security strategy, the developers should also come up with a rigid plan and brainstorm possible security loopholes as well as countermeasures. In this stage, the group will need a rigid model(but not too rigid like waterfall) and produce a full and accurate document for the core functions as well as security functions. Since malfunctioning of core features could cause users to lose some very rare and expensive pet fish, the developers must adopt a more rigid build model (compared to agile) to identify possible errors and fix them before the first release.
 
 \paragraph{}After the initial stage of development and all the 'must have' features are properly implemented without serious errors, the developers can adopt the agile-scrum model for further developments of the 'good to have' and 'can do without' features as well as adding support for new aquarium technology devices with proper sprints. Due to incremental model applied in the initial stage, the maintenance of the platform could be very easy with detailed documentation. Also, the core features  will continue to function properly when the developers adding new features to the system since they are adopting agile after the initial stage of development.  
 
