--- a/SWEN90016/assignments/assignment1/myref.bib
+++ b/SWEN90016/assignments/assignment1/myref.bib
@@ -1,3 +1,9 @@
+@misc{case,
+    title     = "Case {S}tudy for {SWEN9}0016 {A}ssignment {O}ne",
+    url       = " https://app.lms.unimelb.edu.au/bbcswebdav/pid-6964500-dt-content-rid-59731478\_2/xid-59731478\_2"
+}
+
+
 @electronic{IoTsecurity,
  author = {Pal,Ashwin},
   title = {{T}he {I}nternet of {T}hings ({I}o{T}) – {T}hreats and {C}ountermeasures},
